+ text view terbaru

--- a/app/src/main/res/layout/fragment_player_screen.xml
+++ b/app/src/main/res/layout/fragment_player_screen.xml
@@ -35,6 +35,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_collapse_player" />
 
+    <TextView
+        android:id="@+id/tv_another_article"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Terbaru"
+        app:layout_constraintBottom_toBottomOf="@id/iv_collapse_player"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_collapse_player" />
+
     <ImageView
         android:id="@+id/iv_album"
         android:layout_width="328dp"
@@ -100,9 +110,9 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:text="Mati Muda"
+        android:textColor="@color/textBlack"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="@color/textBlack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_album" />
@@ -152,13 +162,13 @@
         android:id="@+id/iv_play_pause"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_gravity="center"
         android:elevation="10dp"
         android:outlineProvider="none"
-        android:layout_gravity="center"
         app:layout_constraintBottom_toTopOf="@id/space_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/bg_butt_play" >
+        app:srcCompat="@drawable/bg_butt_play">
 
         <ImageView
             android:id="@+id/play_pause_image_view"
