--- a/app/src/main/res/layout/fragment_player_screen.xml
+++ b/app/src/main/res/layout/fragment_player_screen.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
+    android:id="@+id/layout_player_screen"
     app:layoutDescription="@xml/fragment_player_screen_scene"
     app:layout_collapseMode="parallax"
     tools:context=".ui.PlayerScreen">
