--- a/app/src/main/res/layout/fragment_first_page.xml
+++ b/app/src/main/res/layout/fragment_first_page.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -82,21 +81,22 @@
                 android:id="@+id/button"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:stateListAnimator="@null"
                 android:background="@drawable/audio"
+                android:stateListAnimator="@null"
                 app:layout_constraintEnd_toEndOf="@+id/content"
                 app:layout_constraintStart_toStartOf="@+id/content"
                 app:layout_constraintTop_toBottomOf="@+id/content" />
 
-<!--            <Button-->
-<!--                android:id="@+id/button2"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:stateListAnimator="@null"-->
-<!--                android:text="aku Om"-->
-<!--                app:layout_constraintEnd_toEndOf="@+id/content"-->
-<!--                app:layout_constraintStart_toStartOf="@+id/content"-->
-<!--                app:layout_constraintTop_toBottomOf="@+id/button" />-->
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:stateListAnimator="@null"
+                android:text="aku Om"
+                app:layout_constraintEnd_toEndOf="@+id/content"
+                app:layout_constraintStart_toStartOf="@+id/content"
+                app:layout_constraintTop_toBottomOf="@+id/button" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
