+ swipe down from compact + add button back in toolbar

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,6 @@
     <color name="buttonBackground">#4e4c62</color>
     <color name="textBlack">#333333</color>
     <color name="textGray">#999999</color>
-    <color name="blue">#E9F5FD</color>
+    <color name="blue">#00599A</color>
 
 </resources>
