--- a/app/src/main/res/layout/fragment_player_screen.xml
+++ b/app/src/main/res/layout/fragment_player_screen.xml
@@ -1,214 +1,225 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ruangaldo.video_youtube.ui.PlayerScreenMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    android:id="@+id/layout_player_screen"
-    app:layoutDescription="@xml/fragment_player_screen_scene"
-    app:layout_collapseMode="parallax"
-    tools:context=".ui.PlayerScreen">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/bg_player_scene"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/playerBackground"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_collapse_player"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:elevation="10dp"
-        android:outlineProvider="none"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_collapse_player" />
-
-    <TextView
-        android:id="@+id/tv_another_article"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Terbaru"
-        app:layout_constraintBottom_toBottomOf="@id/iv_collapse_player"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_collapse_player" />
-
-    <ImageView
-        android:id="@+id/iv_album"
-        android:layout_width="328dp"
-        android:layout_height="183dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="16dp"
-        android:elevation="10dp"
-        android:outlineProvider="none"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_collapse_player"
-        app:srcCompat="@drawable/demo_album" />
-
-    <TextView
-        android:id="@+id/tv_tittle_min"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:elevation="10dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:maxLines="1"
-        android:outlineProvider="none"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:singleLine="true"
-        android:text="Mati Muda"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_album" />
-
-    <TextView
-        android:id="@+id/tv_artist_min"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:elevation="10dp"
-        android:gravity="center"
-        android:outlineProvider="none"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:text="Kelompok Penerbang Roket"
-        android:textColor="@color/textGray"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_tittle_min" />
-
-    <TextView
-        android:id="@+id/tv_tittle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:elevation="10dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:maxLines="1"
-        android:outlineProvider="none"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:text="Mati Muda"
-        android:textColor="@color/textBlack"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_album" />
-
-    <TextView
-        android:id="@+id/tv_artist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:elevation="10dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:maxLines="1"
-        android:outlineProvider="none"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:text="Kelompok Penerbang Roket"
-        android:textColor="@color/textGray"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_tittle" />
-
-    <ImageView
-        android:id="@+id/iv_skip_pre"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
-        app:srcCompat="@drawable/ic_skip_previous" />
-
-    <ImageView
-        android:id="@+id/iv_back_10"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
-        app:layout_constraintEnd_toStartOf="@+id/iv_play_pause"
-        app:layout_constraintStart_toEndOf="@+id/iv_skip_pre"
-        app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
-        app:srcCompat="@drawable/ic_backward" />
+    android:background="@android:color/transparent">
 
     <FrameLayout
-        android:id="@+id/iv_play_pause"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:elevation="10dp"
-        android:outlineProvider="none"
-        app:layout_constraintBottom_toTopOf="@id/space_bottom"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/bg_butt_play">
+        android:id="@+id/frame_audio_playlist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.ruangaldo.video_youtube.ui.PlayerScreenMotionLayout
+        android:id="@+id/layout_player_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/fragment_player_screen_scene"
+        app:layout_collapseMode="parallax"
+        tools:context=".ui.PlayerScreen">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/bg_player_scene"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardBackgroundColor="@color/playerBackground"
+            app:cardCornerRadius="0dp"
+            app:cardElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/play_pause_image_view"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
+            android:id="@+id/iv_collapse_player"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/ic_pause" />
-    </FrameLayout>
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:elevation="10dp"
+            android:outlineProvider="none"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_collapse_player" />
 
-    <ImageView
-        android:id="@+id/iv_forward_10"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
-        app:layout_constraintEnd_toStartOf="@+id/iv_skip_next"
-        app:layout_constraintStart_toEndOf="@+id/iv_play_pause"
-        app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
-        app:srcCompat="@drawable/ic_forward" />
+        <TextView
+            android:id="@+id/tv_another_article"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Terbaru"
+            app:layout_constraintBottom_toBottomOf="@id/iv_collapse_player"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_collapse_player" />
 
-    <ImageView
-        android:id="@+id/iv_skip_next"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
-        app:srcCompat="@drawable/ic_skip_next" />
+        <ImageView
+            android:id="@+id/iv_album"
+            android:layout_width="328dp"
+            android:layout_height="183dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="16dp"
+            android:elevation="10dp"
+            android:outlineProvider="none"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_collapse_player"
+            app:srcCompat="@drawable/demo_album" />
+
+        <TextView
+            android:id="@+id/tv_tittle_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:elevation="10dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:outlineProvider="none"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:singleLine="true"
+            android:text="Mati Muda"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_album" />
+
+        <TextView
+            android:id="@+id/tv_artist_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:outlineProvider="none"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="Kelompok Penerbang Roket"
+            android:textColor="@color/textGray"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_tittle_min" />
+
+        <TextView
+            android:id="@+id/tv_tittle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:elevation="10dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:outlineProvider="none"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="Mati Muda"
+            android:textColor="@color/textBlack"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_album" />
+
+        <TextView
+            android:id="@+id/tv_artist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:elevation="10dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:outlineProvider="none"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="Kelompok Penerbang Roket"
+            android:textColor="@color/textGray"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_tittle" />
+
+        <ImageView
+            android:id="@+id/iv_skip_pre"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
+            app:srcCompat="@drawable/ic_skip_previous" />
+
+        <ImageView
+            android:id="@+id/iv_back_10"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
+            app:layout_constraintEnd_toStartOf="@+id/iv_play_pause"
+            app:layout_constraintStart_toEndOf="@+id/iv_skip_pre"
+            app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
+            app:srcCompat="@drawable/ic_backward" />
+
+        <FrameLayout
+            android:id="@+id/iv_play_pause"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:elevation="10dp"
+            android:outlineProvider="none"
+            app:layout_constraintBottom_toTopOf="@id/space_bottom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/bg_butt_play">
+
+            <ImageView
+                android:id="@+id/play_pause_image_view"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/ic_pause" />
+        </FrameLayout>
+
+        <ImageView
+            android:id="@+id/iv_forward_10"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
+            app:layout_constraintEnd_toStartOf="@+id/iv_skip_next"
+            app:layout_constraintStart_toEndOf="@+id/iv_play_pause"
+            app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
+            app:srcCompat="@drawable/ic_forward" />
+
+        <ImageView
+            android:id="@+id/iv_skip_next"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
+            app:srcCompat="@drawable/ic_skip_next" />
 
 
-    <Space
-        android:id="@+id/space_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent=".1"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Space
+            android:id="@+id/space_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent=".1"
+            app:layout_constraintStart_toStartOf="parent" />
 
-</com.ruangaldo.video_youtube.ui.PlayerScreenMotionLayout>
+    </com.ruangaldo.video_youtube.ui.PlayerScreenMotionLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
