--- a/app/src/main/res/layout/fragment_audio_articles.xml
+++ b/app/src/main/res/layout/fragment_audio_articles.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.AudioArticlesActivity">
+    tools:context=".ui.AudioArticlesFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
